corrected overflow problem with input boxs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,7 +56,7 @@ body {
 .welcome-line{
     height: 1px;
     margin: 0rem 5rem;
-    color: rgba(128, 128, 128, 0.274);
+    color: rgba(128, 128, 128, 0.1);
 }
 .form-input h1 {
     margin-top: 15px;
@@ -156,6 +156,7 @@ body {
 .extra-option hr {
     width: 50px;
     height: 2px;
+    color: rgba(128, 128, 128, 0.144);
 }
 
 .extra-social-option {
@@ -175,7 +176,8 @@ body {
 .forgot {
     text-align: center;
     display: block;
-    margin: auto
+    margin: auto;
+    font-size: .7rem;
 }
 
 @media (max-width:1000px) {
